@@ -1,0 +1,24 @@
+<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
+<html>
+  <head>
+    <title>The gnu.kawa.reflect package</title>
+  </head>
+  <body>
+    Contains classes to use reflection.
+
+<h2>Dependencies</h2>
+Depends on
+<code><a href="../../bytecode/package-summary.html">gnu.bytecode</a></code>,
+<code><a href="../../mapping/package-summary.html">gnu.mapping</a></code>, and
+<code><a href="../../expr/package-summary.html">gnu.expr</a></code>.
+Also uses <code><a href="../../kawa/util/FString.html">gnu.kawa.util.FString</a></code>.
+Uses <code><a href="../../../kawa/standard/Scheme.html">kawa.standard.Scheme</a></code>, but that is a bug.
+(It should be using <code>gnu.expr.Interpreter</code> instead.)
+
+<h2>Author</h2>
+
+<a href="http://www.bothner.com/~per">Per Bothner</a>
+<tt>&lt;<a href="mailto:per@bothner.com">per@bothner.com</a>&gt;</tt>
+
+  </body>
+</html>
