@@ -1,3 +1,11 @@
+2000-02-27  Per Bothner  <per@bothner.com>
+
+	* ClassMemberConstraint.java (define):  Since kawa.lang.Syntax now
+	implements Named, we no longer need special case for it.
+
+	Various tweaks for better javadoc processing.
+	* package.html:  New file.
+
 2000-01-31  Per Bothner  <per@bothner.com>
 
 	* ClassMethods.java (getMethods):  Interpreter is now in gnu.expr.
